--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,12 +10,8 @@ http {
 
     sendfile        on;
 
-    upstream insurance_client {
-        server insurance_client:5173;
-    }
-
-    upstream insurance_api {
-        server insurance_api:5001;
+    upstream deploy_api {
+        server deploy_api:5001;
     }
 
     server {
@@ -23,16 +19,11 @@ http {
         server_name localhost;
 
         location / {
-            proxy_pass http://insurance_client;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "keep-alive";
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            root   /usr/share/nginx/html;
         }
 
         location /api/ {
-            proxy_pass http://insurance_api/;
+            proxy_pass http://deploy_api/;
             proxy_redirect     off;
             proxy_http_version 1.1;
             proxy_cache_bypass $http_upgrade;
